test/langtools/tools/javac/superInit/SuperInitBad04.out
SuperInitBad04.java:11:9: compiler.err.cant.ref.before.ctor.called: super
1 error
